--- a/hotels.html
+++ b/hotels.html
@@ -10,15 +10,15 @@
 
 <body>
   <header class="main-header">
+    <a class="main-header-logo" href="index.html">
+      <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
+    </a>
     <nav class="main-navigation">
-      <a class="main-header-logo" href="index.html">
-        <img src="img/logo_sedona.png" width="137" height="70" alt="Логотип Седона">
-      </a>
       <ul class="site-navigation">
         <li><a href="info.html">Информация</a></li>
         <li><a href="news.html">Фото и видео</a></li>
         <li><a href="price.html">Карта штата</a></li>
-        <li><a class="site-navigation-current">Гостиницы</a></li>
+        <li><a href="hotels.html" class="site-navigation-current">Гостиницы</a></li>
       </ul>
     </nav>
   </header>
@@ -28,49 +28,55 @@
       <h2 class="visually-hidden">Фильтр гостиниц</h2>
       <form class="filter-form" action="#" method="get">
         <div class="filter-field infrastructure">
-           <div class="filter-title">Инфраструктура:</div>
-           <input id="pool" type="checkbox" name="infrastructure" value="pool" checked>
-  					<label for="pool">Бассейн</label>
-  					<input id="parking" type="checkbox" name="infrastructure" value="parking" disabled>
-  					<label for="parking">Парковка</label>
-  					<input id="wi-fi" type="checkbox" name="infrastructure" value="wi-fi">
-  					<label for="wi-fi">Wi-Fi</label>
+          <div class="filter-title">Инфраструктура:</div>
+          <input id="pool" type="checkbox" name="infrastructure" value="pool" checked>
+          <label for="pool">Бассейн</label>
+          <input id="parking" type="checkbox" name="infrastructure" value="parking">
+          <label for="parking">Парковка</label>
+          <input id="wi-fi" type="checkbox" name="infrastructure" value="wi-fi">
+          <label for="wi-fi">Wi-Fi</label>
         </div>
         <div class="filter-field housing">
-        <div class="filter-title">Тип жилья:</div>
-        <input id="hotel" type="checkbox" name="housing" value="hotel" checked>
-        <label for="hotel">Гостиница</label>
-        <input id="motel" type="checkbox" name="housing" value="motel" checked>
-        <label for="motel">Мотель</label>
-        <input id="apartments" type="checkbox" name="housing" value="apartments" checked>
-        <label for="apartments">Апартаменты</label>
-       </div>
-       <div class="filter-field price">
-         <div class="filter-range-title">Стоимость в сутки (р):</div>
-         <div class="price-controls">
-           <label class="min-price">от <input type="text" name="min-price" value="0"></label>
-           <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
-         </div>
-         <div class="range-controls">
-           <div class="scale">
-             <div class="bar"></div>
-           </div>
-           <div class="range-toggle range-toggle-min"></div>
-           <div class="range-toggle range-toggle-max"></div>
-         </div>
-         <a class="btn-transparent">Показать</a>
-       </div>
-    </form>
-  </section>
+          <div class="filter-title">Тип жилья:</div>
+          <input id="hotel" type="checkbox" name="housing" value="hotel" checked>
+          <label for="hotel">Гостиница</label>
+          <input id="motel" type="checkbox" name="housing" value="motel" checked>
+          <label for="motel">Мотель</label>
+          <input id="apartments" type="checkbox" name="housing" value="apartments" checked>
+          <label for="apartments">Апартаменты</label>
+        </div>
+        <div class="filter-field price">
+          <div class="filter-range-title">Стоимость в сутки (р):</div>
+          <div class="price-controls">
+            <label class="min-price">от <input type="text" name="min-price" value="0"></label>
+            <label class="max-price">до <input type="text" name="max-price" value="3000"></label>
+          </div>
+          <div class="range-controls">
+            <div class="scale">
+              <div class="bar"></div>
+            </div>
+            <div class="range-toggle range-toggle-min"></div>
+            <div class="range-toggle range-toggle-max"></div>
+          </div>
+          <button type="submit" class="btn-transparent">Показать</button>
+        </div>
+      </form>
+    </section>
     <!-- Sorting -->
     <section class="sorting">
       <span>Найдено:<span>3</span></span>
       <h2 class="visually-hidden">Сортировка гостиниц</h2>
       <div class="sorting-result">
         <span>Сортировка:</span>
-        <div class="sort-variant-block"><a>По цене</a></div>
-        <div class="sort-variant-block"><a href="#">По типу</a></div>
-        <div class="sort-variant-block"><a href="#">По рейтингу</a></div>
+        <ul class="sorting-list">
+          <li class="sorting-item active"><a href="#">По цене</a></li>
+          <li class="sorting-item"><a href="#">По типу</a></li>
+          <li class="sorting-item"><a href="#">По рейтингу</a></li>
+        </ul>
+        <div class="sorting-arrows">
+          <a class="sorting-up" href="#"><span class="visually-hidden">по возрастанию</span></a>
+          <a class="sorting-down active" href="#"><span class="visually-hidden">по убыванию</span></a>
+        </div>
       </div>
     </section>
     <!-- Hotels -->
@@ -97,23 +103,23 @@
     </section>
     <!-- Desert Quail Inn -->
     <section class="hotel">
-    <img src="img/hotel/desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
-    <div class="hotel-description">
-      <a class="catalog-category" href="#">
-        <h3>Desert Quail Inn</h3>
-      </a>
-      <div>
-        <span>Мотель</span>
-        <a class="btn btn-blue" href="#">Подробнее</a>
-      </div>
-      <div>
-        <span>от 3000 р.</span>
-        <a class="btn btn-brown" href="#">Забронировать</a>
-      </div>
-      <div class="raiting">
-        <span class="raiting-stars raiting-stars-3"></span>
-        <p class="raiting-points">Рейтинг: 8,9</p>
-      </div>
+      <img src="img/hotel/desert.jpg" width="220" height="165" alt="Amara Resort & Spa»">
+      <div class="hotel-description">
+        <a class="catalog-category" href="#">
+          <h3>Desert Quail Inn</h3>
+        </a>
+        <div>
+          <span>Мотель</span>
+          <a class="btn btn-blue" href="#">Подробнее</a>
+        </div>
+        <div>
+          <span>от 3000 р.</span>
+          <a class="btn btn-brown" href="#">Забронировать</a>
+        </div>
+        <div class="raiting">
+          <span class="raiting-stars raiting-stars-3"></span>
+          <p class="raiting-points">Рейтинг: 8,9</p>
+        </div>
     </section>
     <!-- Villas at Poco Diablo -->
     <section class="hotel">
@@ -141,18 +147,18 @@
     <p class="footer-hashteg">#visitSEDONA</p>
     <ul class="footer-social">
       <li>
-        <a class="social-button" href="#">
-          <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
+        <a class="social-button social-button-tw" href="#">
+          <span class="visually-hidden">твиттер</span>
         </a>
       </li>
       <li>
-        <a class="social-button" href="#">
-            <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
+        <a class="social-button social-button-fb" href="#">
+            <span class="visually-hidden">фейсбук</span>
         </a>
       </li>
       <li>
-        <a class="social-button" href="#">
-              <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
+        <a class="social-button social-button-yt" href="#">
+            <span class="visually-hidden">ютюб</span>
         </a>
       </li>
     </ul>
