--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ru">
 
@@ -107,17 +106,17 @@
         <div class="text-row">
           <label for="adults">Взрослые:</label>
           <div class="person-amount">
-            <button class="btn btn-amount amount-minus" type="button"></button>
+            <button class="btn btn-amount amount-minus" type="button"><span class="visually-hidden">убавить</span></button>
             <input id="adults" type="text" name="adults" placeholder="2" class="text-center">
-            <button class="btn btn-amount amount-plus" type="button"></button>
+            <button class="btn btn-amount amount-plus" type="button"><span class="visually-hidden">прибавить</span></button>
           </div>
         </div>
         <div class="text-row">
           <label for="kids">Дети:</label>
           <div class="person-amount">
-            <button class="btn btn-amount amount-minus" type="button"></button>
+            <button class="btn btn-amount amount-minus" type="button"><span class="visually-hidden">убавить</span></button>
             <input id="kids" type="text" name="kids" placeholder="0" class="text-center">
-            <button class="btn btn-amount amount-plus" type="button"></button>
+            <button class="btn btn-amount amount-plus" type="button"><span class="visually-hidden">прибавить</span></button>
           </div>
         </div>
         <!-- Кнопка найти -->
@@ -134,174 +133,26 @@
     <p class="footer-hashteg">#visitSEDONA</p>
     <ul class="footer-social">
       <li>
-        <a class="social-button" href="#">
-        <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
-      </a>
+        <a class="social-button social-button-tw" href="#">
+            <span class="visually-hidden">твиттер</span>
+          </a>
       </li>
       <li>
-        <a class="social-button" href="#">
-          <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
-      </a>
+        <a class="social-button social-button-fb" href="#">
+              <span class="visually-hidden">фейсбук</span>
+          </a>
       </li>
       <li>
-        <a class="social-button" href="#">
-            <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
-      </a>
+        <a class="social-button social-button-yt" href="#">
+              <span class="visually-hidden">ютюб</span>
+          </a>
       </li>
     </ul>
     <p class="footer-copyright">
       <b>WEBSITE by</b>
       <a href="https://htmlacademy.ru">
-      <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
-    </a>
+          <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
+        </a>
     </p>
   </footer>
 </body>
-=======
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="utf-8">
-  <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
-  <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
-  <title>Седона</title>
-</head>
-<body>
-  <header class="main-header">
-    <nav class="main-navigation">
-      <ul class="site-navigation">
-        <li><a href="info.html">Информация</a></li>
-        <li><a href="news.html">Фото и видео</a></li>
-        <li><a href="price.html">Карта штата</a></li>
-        <li><a href="hotels.html">Гостиницы</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main class="container">
-    <section class="welcome">
-      <img src="img/welcome.jpg" width="1200" height="508" alt="Главный банер">
-      <h1 class="visually-hidden">Седона</h1>
-      <p class="welcome-title">Седона— небольшой городок в Арионе,заслуживающий большего!</p>
-      <p class="welcome-text">Рассмотрим 5 причин, по которым Седона круче, чем гранд каньон!</p>
-    </section>
-    <section class="advantage">
-      <div class="advantage-blue">
-        <h3>Настоящий городок</h3>
-        <span>— №1 —</span>
-        <p>Седона — не аттракцион для туристов, там течет своя жизнь</p>
-      </div>
-      <img src="img/index/town.jpg" width="800" height="256" alt="Настоящий городок">
-   </section>
-   <section class="services">
-      <h2 class="visually-hidden">Услуги</h2>
-      <ul>
-        <li class="services-item housing">
-          <h3>Жилье</h3>
-          <p>Рекомендуем пожить в настоящем мотеле, все как в кино!<p>
-        </li>
-        <li class="services-item food">
-          <h3>Еда</h3>
-          <p>Всегда заказывайте фирменный бургер, Вы не разочаруетесь!<p>
-        </li>
-        <li class="services-item souvenir">
-          <h3>Сувениры</h3>
-          <p>Не только китайского, но и местного производства!<p>
-        </li>
-      </ul>
-   </section>
-  <section class="advantage">
-    <img src="img/index/bridge.jpg" width="800" height="256" alt="Мост дьявола">
-    <div class="advantage-blue">
-      <h3>Там есть Мост дьявола</h3>
-      <span>— №2 —</span>
-      <p>Да, по нему можно пройти! Если конечно вы осмелитесь</p>
-    </div>
-  </section>
-  <section class="advantage">
-    <div class="advantage-grey">
-      <h3>Небольшая площадь</h3>
-      <span>— №3 —</span>
-      <p>Все достопримечательности находятся очень близко<p>
-    </div>
-    <div class="advantage-grey">
-      <h3>Красивая дорога</h3>
-      <span>— №4 —</span>
-      <p>Ехать в Седону из Лас-Вегаса совсем не скучно!<p>
-    </div>
-    <div class="advantage-grey">
-      <h3>Мало туристов</h3>
-      <span>— №5 —</span>
-      <p>Большинство едет в гранд каньон и толпится там<p>
-    </div>
-  </section>
-  <section class="appointment">
-    <h2>Заинтересовались?</h2>
-    <p class="appointment-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-    <button class="btn btn-brown">Поиск гостиницы в Седоне</button>
-    <!-- Здесь будет форма -->
-    <form id="booking_form" class="booking-form" action="#" method="get">
-      <div class="text-row">
-        <label for="checkin">Дата заезда:</label>
-        <div class="calendar form-grey">
-          <input id="checkin" type="text" name="checkin" placeholder="24 апреля 2016">
-        </div>
-      </div>
-      <div class="text-row">
-        <label for="checkout">Дата выезда:</label>
-        <div class="calendar form-grey">
-          <input id="checkout" type="text" name="checkout" placeholder="4 июля 2016">
-        </div>
-      </div>
-      <div class="text-row">
-        <label for="adults">Взрослые:</label>
-          <div class="person-amount">
-            <button class="btn btn-amount amount-minus" type="button"></button>
-            <input id="adults" type="text" name="adults" placeholder="2" class="text-center">
-            <button class="btn btn-amount amount-plus" type="button"></button>
-          </div>
-      </div>
-      <div class="text-row">
-        <label for="kids">Дети:</label>
-          <div class="person-amount">
-            <button class="btn btn-amount amount-minus" type="button"></button>
-            <input id="kids" type="text" name="kids" placeholder="0" class="text-center">
-            <button class="btn btn-amount amount-plus" type="button"></button>
-          </div>
-        </div>
-      </div>
-    <!-- Кнопка найти -->
-    <div class="btn btn-blue">
-    <input type="button" value="Найти">
-    </div>
-  </form>
-    <div class="map"></div>
-  </section>
-</main>
-<footer class="main-footer">
-  <p class="footer-hashteg">#visitSEDONA</p>
-  <ul class="footer-social">
-    <li>
-      <a class="social-button" href="#">
-        <img src="img/svg/twitter.svg" width="" height="" alt="Твиттер">
-      </a>
-    </li>
-    <li>
-      <a class="social-button" href="#">
-          <img src="img/svg/fb-icon.svg" width="" height="" alt="Фейсбук">
-      </a>
-    </li>
-    <li>
-      <a class="social-button" href="#">
-            <img src="img/svg/youtube.svg" width="" height="" alt="Ютюб">
-      </a>
-    </li>
- </ul>
- <p class="footer-copyright">
-    <b>WEBSITE by</b>
-    <a href="https://htmlacademy.ru">
-      <img src="img/svg/logo-htmlacademy.svg" width="114" height="39" alt="Логотип Htmlacademy">
-    </a>
- </p>
-</footer>
-</body>
->>>>>>> 69809594ee8caf4e18364b8a268c854fc693af38
