--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
   <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
   <title>Седона</title>
+  <link href="style.css" rel="stylesheet">
 </head>
 
 <body>
