--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
   <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
   <title>Седона</title>
+  <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 
@@ -89,7 +90,7 @@
     <section class="appointment">
       <h2>Заинтересовались?</h2>
       <p class="appointment-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в седоне</p>
-      <button class="btn btn-brown">Поиск гостиницы в Седоне</button>
+      <button class="btn btn-brown btn-index">Поиск гостиницы в Седоне</button>
       <!-- Здесь будет форма -->
       <form id="booking_form" class="booking-form" action="#" method="get">
         <div class="text-row">
@@ -121,9 +122,7 @@
           </div>
         </div>
         <!-- Кнопка найти -->
-        <div class="btn btn-blue">
-          <input type="button" value="Найти">
-        </div>
+        <button class="btn btn-blue btn-index" type="submit" name="search-hotels">Найти</button>
       </form>
       <div class="map">
         <img src="img/index/map.jpg" width="1200" height="593" alt="Карта">
