--- a/hotels.html
+++ b/hotels.html
@@ -6,6 +6,8 @@
   <meta name="keywords" content="Седона-небольшой городок Аризоне, заслуживающий большего!">
   <meta name="description" content="Рассмотрим 5 причин, по которым Седона круче,чем Гранд Каньен">
   <title>Седона</title>
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -89,11 +91,11 @@
         </a>
         <div>
           <span>Гостиница</span>
-          <a class="btn btn-blue" href="#">Подробнее</a>
+          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
         </div>
         <div>
           <span>от 4000 р.</span>
-          <a class="btn btn-brown" href="#">Забронировать</a>
+          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
         </div>
       </div>
       <div class="raiting">
@@ -110,11 +112,11 @@
         </a>
         <div>
           <span>Мотель</span>
-          <a class="btn btn-blue" href="#">Подробнее</a>
+          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
         </div>
         <div>
           <span>от 3000 р.</span>
-          <a class="btn btn-brown" href="#">Забронировать</a>
+          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
         </div>
         <div class="raiting">
           <span class="raiting-stars raiting-stars-3"></span>
@@ -130,11 +132,11 @@
         </a>
         <div>
           <span>Апартаменты</span>
-          <a class="btn btn-blue" href="#">Подробнее</a>
+          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
         </div>
         <div>
           <span>от 2000 р.</span>
-          <a class="btn btn-brown" href="#">Забронировать</a>
+          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
         </div>
       </div>
       <div class="raiting">
