--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </section>
   </main>
   <footer class="main-footer">
-   <p class="footer-hashteg">#visitSEDONA</p>
+   <p class="footer-hashteg">#visitsedona</p>
     <ul class="footer-social">
       <li>
         <a class="social-button social-button-tw" href="#">
