исправление базовой стилизации

--- a/hotels.html
+++ b/hotels.html
@@ -66,12 +66,12 @@
     </section>
     <!-- Sorting -->
     <section class="sorting">
-      <span>Найдено:<span>3</span></span>
+      <span class="find">Найдено:<span>3</span></span>
       <h2 class="visually-hidden">Сортировка гостиниц</h2>
       <div class="sorting-result">
         <span>Сортировка:</span>
         <ul class="sorting-list">
-          <li class="sorting-item active"><a href="#">По цене</a></li>
+          <li class="active"><a href="#">По цене</a></li>
           <li class="sorting-item"><a href="#">По типу</a></li>
           <li class="sorting-item"><a href="#">По рейтингу</a></li>
         </ul>
@@ -91,11 +91,11 @@
         </a>
         <div>
           <span>Гостиница</span>
-          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
+          <button class="btn btn-blue btn-hotel" type="submit" name="search-hotels">Подробнее</button>
         </div>
         <div>
           <span>от 4000 р.</span>
-          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
+          <button class="btn btn-brown btn-hotel" type="submit" name="book-hotels">Забронировать</button>
         </div>
       </div>
       <div class="raiting">
@@ -112,11 +112,11 @@
         </a>
         <div>
           <span>Мотель</span>
-          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
+          <button class="btn btn-blue btn-hotel" type="submit" name="search-hotels">Подробнее</button>
         </div>
         <div>
           <span>от 3000 р.</span>
-          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
+          <button class="btn btn-brown btn-hotel" type="submit" name="book-hotels">Забронировать</button>
         </div>
         <div class="raiting">
           <span class="raiting-stars raiting-stars-3"></span>
@@ -132,11 +132,11 @@
         </a>
         <div>
           <span>Апартаменты</span>
-          <a class="btn btn-blue btn-hotel" href="#">Подробнее</a>
+          <button class="btn btn-blue btn-hotel" type="submit" name="search-hotels">Подробнее</button>
         </div>
         <div>
           <span>от 2000 р.</span>
-          <a class="btn btn-brown btn-hotel" href="#">Забронировать</a>
+          <button class="btn btn-brown btn-hotel" type="submit" name="book-hotels">Забронировать</button>
         </div>
       </div>
       <div class="raiting">
